--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.edit.EditFragment"
+    >
 
     <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/photo_view"
@@ -9,7 +13,7 @@
         android:layout_height="match_parent"
         android:scaleType="centerInside" />
 
-    <com.zfdang.mdoi.ui.dashboard.DrawingOverlayView
+    <com.zfdang.mdoi.ui.edit.DrawingOverlayView
         android:id="@+id/drawing_overlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
