--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,13 +13,13 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.zfdang.mdoi.ui.dashboard.DashboardFragment"
+        android:name="com.zfdang.mdoi.ui.edit.EditFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_edit" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.zfdang.mdoi.ui.notifications.NotificationsFragment"
+        android:name="com.zfdang.mdoi.ui.about.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
